Okay so this is bit of a major shift because I've move to a Glove80 due to pain, so my chops are a lot slower at the moment, but this will ultimately make me much faster in the long run. The footer styling is complete, now to fix the Welcome Page.

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,10 @@
   font-family: "Fira Code", monospace;
 }
 body {
-  background-color: black;
   color: white;
+
+  background-image: url(./assets/BackgroundExample.png);
+  background-repeat: repeat;
 }
 h1 {
   font-size: 48px;
@@ -36,6 +38,25 @@ a {
   text-decoration: none;
 }
 
+
+.link__hover-effect {
+  position: relative;
+}
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  background-color: white;
+  height: 3px;
+  bottom: -3px;
+  right: 0;
+  width: 0%;
+  transition: all 300ms ease;
+}
+.link__hover-effect:hover::after {
+  left: 0;
+  width: 100%;
+}
+
 #welcome-section {
   display: flex;
   justify-content: center;
@@ -46,15 +67,13 @@ a {
   width: 100%;
   color: #6f53b1;
   background-color: #433e886e;
-  font-size: 3em; /* Initial large size */
+  font-size: 12rem;
   height: 100vh; /* Initial full viewport height */
   transition: height 0.1s ease-out, font-size 0.1s ease-out; /* Smooth transition */
   z-index: 10; /* Ensure it stays above other content */
   border-bottom: #2c091b 8px double;
   box-shadow: inset 0 0 40px 16px #100522;
-
 }
-
 
 .clickable {
   cursor: pointer;
@@ -76,17 +95,7 @@ a {
   flex-direction: column;
   position: relative;
 }
-.main__bg {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
 
-  background-image: url(./assets/BackgroundExample.png);
-  background-repeat: repeat;
-}
 
 #resume__modal {
   position: absolute;
@@ -108,7 +117,7 @@ a {
   top: 28px;
   left: 60px;
   color: gray;
-  transition: all 300ms ease;
+  transition: all 300ms easej;
 }
 .resume__modal--exit:hover {
   color: white;
@@ -156,9 +165,7 @@ a {
 .resume__download:hover {
   color: white;
   background-color: #099166;
-
 }
-
 
 .resume__download--wrapper {
   width: 100%;
@@ -223,7 +230,6 @@ a {
   right: 0;
   bottom: 0;
 }
-
 
 .resume__zoom {
   display: flex;
@@ -323,7 +329,6 @@ a {
 .resume__btn:hover:active {
   color: #7c194b;
   border: 1px solid #7c194b;
-
 }
 .links {
   display: flex;
@@ -911,6 +916,13 @@ a {
   box-shadow: 0px 12px 4px 2px #61616141;
 }
 
+#footer {
+  background-color: black;
+  position: relative;
+  overflow: hidden;
+  margin-top: 160px;
+}
+
 .footer__container {
   padding: 60px 0;
 }
@@ -920,9 +932,10 @@ a {
 }
 
 .footer {
-  background-color: #433e886e;
+  background-color: #433e8888;
   box-shadow: inset 0 0 40px 16px #100522;
   position: relative;
+  z-index: 2;
 }
 
 .footer__links {
@@ -938,15 +951,14 @@ a {
   justify-content: center;
   align-items: center;
   font-size: 20px;
+  position: relative;
+  z-index: 3;
 }
 
 .footer__logo--img {
   width: 100%;
   height: 100%;
 }
-
-
-
 
 .footer__logo {
   width: 80px;
@@ -958,6 +970,34 @@ a {
   box-shadow: 0 0 12px 4px #a1a1bbfd;
   border-radius: 50%;
   background-color: #a1a1bbfd;
+  position: relative;
+  transition: all 300ms ease;
+  
+}
+
+.footer__logo--hover {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  top: 0;
+  transform: translateY(0);
+  opacity: 0;
+  scale: 0;
+  transition: all 300ms ease;
+  z-index: -1;
+}
+
+.footer__logo:hover {
+  background-color: white;
+  box-shadow: 0 0 12px 4px white;
+  
+}
+
+.footer__logo:hover .footer__logo--hover {
+  transform: translateY(-32px);
+  opacity: 1;
+  scale: 1;
 }
 
 .footer__bg--wrapper {
@@ -965,7 +1005,6 @@ a {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  z-index: -1;
 }
 
 .footer__bg {
